--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,23 @@
     --black: #0B0A0A;
 }
 
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/medium.woff2') format('woff2');
+    font-weight: 500;
+    font-display: swap;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/Bold.woff2') format('woff2');
+    font-weight: bold;
+    font-display: swap;
+    font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
